--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"engines": {
 		"node": "16.x"
 	},
-	"description": "",
+	"description": "Start coding a react application",
 	"main": "index.js",
 	"scripts": {
 		"start": "webpack-dev-server --mode development",
@@ -57,11 +57,21 @@
 		]
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.5.2",
+		"@fortawesome/free-brands-svg-icons": "^6.5.2",
+		"@fortawesome/free-regular-svg-icons": "^6.5.2",
+		"@fortawesome/free-solid-svg-icons": "^6.5.2",
+		"@fortawesome/react-fontawesome": "^0.2.2",
+		"express": "^4.19.2",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-polyfills": "0.0.1",
 		"react-router": "^6.0.2"
-	}
+	},
+	"directories": {
+		"doc": "docs"
+	},
+	"keywords": []
 }
